# dawn

cache/in-memory/src/: updates.rs
cache/in-memory/src/model/: member.rs
gateway/: Cargo.toml
gateway/examples/cluster/: Cargo.toml
gateway/src/cluster/: builder.rs  impl.rs
gateway/src/shard/: builder.rs  config.rs  impl.rs
gateway/src/shard/processor/: impl.rs
http/: Cargo.toml
http/examples/get-message/src/: main.rs
http/examples/slash-commands/src/: main.rs
http/src/: error.rs  lib.rs  routing.rs
http/src/client/: builder.rs  mod.rs
http/src/ratelimiting/: error.rs  headers.rs
http/src/request/: base.rs  mod.rs
http/src/request/applications/: create_global_command.rs  create_guild_command.rs  get_guild_command_permission.rs  get_guild_commands_permission.rs  mod.rs  set_guild_commands_permission.rs  update_global_command.rs  update_guild_command.rs  update_guild_command_permission.rs
http/src/request/guild/: get_guild_vanity_url.rs
http/src/request/guild/member/: get_member.rs
model/src/: lib.rs
model/src/applications/command/: mod.rs  permissions.rs
model/src/channel/message/: mod.rs
model/src/gateway/event/: dispatch.rs  mod.rs
model/src/gateway/payload/: ready.rs
model/src/guild/: partial_member.rs
model/src/oauth/: current_application_info.rs
standby/src/: lib.rs
