[package]
authors = ["Twilight Contributors"]
edition = "2018"
name = "twilight-gateway-example-cluster"
version = "0.1.0"

[dependencies]
twilight-gateway = { path = "../..", default-features = false, features = ["compression", "native", "tracing"] }
futures = "0.3"
tracing-subscriber = "0.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
